--- a/index.html
+++ b/index.html
@@ -1,55 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>JBC Token DApp</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>JimmyBoss Collective (JBC)</title>
   <style>
-    body { font-family: Arial; background: #111; color: #eee; padding: 20px; }
-    button { padding: 10px 20px; margin: 10px; background: #007bff; color: white; border: none; cursor: pointer; }
-    #output { margin-top: 20px; }
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #0d1117;
+      color: #ffffff;
+      text-align: center;
+      padding: 50px 20px;
+    }
+    h1 {
+      font-size: 3em;
+      color: #00ffa2;
+    }
+    p {
+      font-size: 1.2em;
+      color: #b3b3b3;
+    }
+    .button {
+      background-color: #00ffa2;
+      color: #0d1117;
+      padding: 15px 30px;
+      border: none;
+      font-size: 1em;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 30px;
+    }
+    .button:hover {
+      background-color: #00c789;
+    }
+    footer {
+      margin-top: 80px;
+      color: #666;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
-  <h1>Connect Wallet to JBC</h1>
-  <button onclick="connectWallet()">Connect Wallet</button>
-  <button onclick="getBalance()">Check JBC Balance</button>
-
-  <div id="output"></div>
-
-  <script>
-    const JBC_ADDRESS = "0xa9CC0D38E57dBEC771D7EaCd133d509E40cb6473"; // JBC Token address
-    const ABI = [
-      "function balanceOf(address owner) view returns (uint256)",
-      "function name() view returns (string)",
-      "function symbol() view returns (string)",
-      "function decimals() view returns (uint8)"
-    ];
-
-    let provider;
-    let signer;
-    let jbcContract;
-
-    async function connectWallet() {
-      if (window.ethereum) {
-        provider = new ethers.providers.Web3Provider(window.ethereum);
-        await provider.send("eth_requestAccounts", []);
-        signer = provider.getSigner();
-        jbcContract = new ethers.Contract(JBC_ADDRESS, ABI, provider);
-        document.getElementById("output").innerText = "Wallet connected: " + await signer.getAddress();
-      } else {
-        alert("MetaMask not detected");
-      }
-    }
-
-    async function getBalance() {
-      if (!signer || !jbcContract) return alert("Connect wallet first");
-      const address = await signer.getAddress();
-      const balance = await jbcContract.balanceOf(address);
-      const decimals = await jbcContract.decimals();
-      const symbol = await jbcContract.symbol();
-      document.getElementById("output").innerText = `Balance: ${ethers.utils.formatUnits(balance, decimals)} ${symbol}`;
-    }
-  </script>
+  <h1>JimmyBoss Collective (JBC)</h1>
+  <p>The future of decentralized income. Earn. Share. Grow.</p>
+  <p><strong>Contract Address:</strong><br/>0xa9CC0D38E57dBEC771D7EaCd133d509E40cb6473</p>
+  <button class="button" onclick="alert('Wallet connect coming soon...')">Connect Wallet</button>
+  <footer>
+    &copy; 2025 JimmyBoss Collective. All rights reserved.
+  </footer>
 </body>
 </html>
