--- a/index.html
+++ b/index.html
@@ -1,64 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>JimmyBoss Collective (JBC)</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.8.2/dist/web3.min.js"></script>
   <style>
-    body { background-color: #0f0f0f; color: white; font-family: sans-serif; text-align: center; padding: 40px; }
-    button { padding: 10px 20px; font-size: 16px; background: lime; color: black; border: none; border-radius: 5px; cursor: pointer; margin-top: 20px; }
-    p { margin-top: 20px; }
+    body { background-color: #0f0f0f; color: white; font-family: sans-serif; text-align: center; margin-top: 100px; }
+    button { padding: 12px 24px; font-size: 16px; background-color: lime; border: none; border-radius: 5px; cursor: pointer; }
   </style>
 </head>
 <body>
-  <h1 style="color:lime;">JimmyBoss Collective (JBC)</h1>
+  <h1 style="color: lime;">JimmyBoss Collective (JBC)</h1>
   <p>The future of decentralized income. Earn. Share. Grow.</p>
-  <p><strong>Contract Address:</strong><br>0xa9CC0D38E57dBEC771D7EaCd133d509E40cb6473</p>
+  <p><strong>Contract Address:</strong> 0xa9CC0D38E57dBEC771D7EaCd133d509E40cb6473</p>
 
   <button onclick="connectWallet()">Connect Wallet</button>
   <p id="wallet-address"></p>
-  <p id="balance"></p>
 
   <script>
-    const jbcAddress = "0xa9CC0D38E57dBEC771D7EaCd133d509E40cb6473";
-    const jbcABI = [
-      {
-        "constant":true,
-        "inputs":[{"name":"account","type":"address"}],
-        "name":"balanceOf",
-        "outputs":[{"name":"","type":"uint256"}],
-        "type":"function"
-      },
-      {
-        "constant":true,
-        "inputs":[],
-        "name":"decimals",
-        "outputs":[{"name":"","type":"uint8"}],
-        "type":"function"
-      }
-    ];
-
     async function connectWallet() {
       if (window.ethereum) {
-        const web3 = new Web3(window.ethereum);
         try {
-          await window.ethereum.request({ method: "eth_requestAccounts" });
-          const accounts = await web3.eth.getAccounts();
-          const userAddress = accounts[0];
-          document.getElementById("wallet-address").innerText = "Connected wallet: " + userAddress;
-
-          const jbc = new web3.eth.Contract(jbcABI, jbcAddress);
-          const rawBalance = await jbc.methods.balanceOf(userAddress).call();
-          const decimals = await jbc.methods.decimals().call();
-          const formattedBalance = rawBalance / (10 ** decimals);
-
-          document.getElementById("balance").innerText = `JBC Balance: ${formattedBalance}`;
+          const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+          document.getElementById("wallet-address").innerText = "Connected: " + accounts[0];
+          console.log("Connected account:", accounts[0]);
         } catch (error) {
-          console.error("Wallet connection error:", error);
-          document.getElementById("wallet-address").innerText = "Connection failed.";
+          console.error("User rejected connection");
         }
       } else {
-        alert("MetaMask not detected. Please install MetaMask.");
+        alert("MetaMask not found. Please install MetaMask extension.");
       }
     }
   </script>
