--- a/index.html
+++ b/index.html
@@ -1,72 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>JimmyBoss Collective (JBC)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
   <style>
     body {
       background-color: #0f0f0f;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       text-align: center;
-      padding-top: 80px;
+      padding-top: 100px;
+    }
+    h1 {
+      color: #00ff99;
     }
     button {
-      background-color: #00ffae;
       padding: 12px 24px;
       font-size: 16px;
+      background-color: #00cc88;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
     }
     #wallet-address {
       margin-top: 20px;
       font-size: 14px;
-      color: #aaa;
+      color: #999;
     }
   </style>
 </head>
 <body>
-  <h1 style="color:lime;">JimmyBoss Collective (JBC)</h1>
+  <h1>JimmyBoss Collective (JBC)</h1>
   <p>The future of decentralized income. Earn. Share. Grow.</p>
   <p><strong>Contract Address:</strong><br>0xa9CC0D38E57dBEC771D7EaCd133d509E40cb6473</p>
-
+  
   <button onclick="connectWallet()">Connect Wallet</button>
   <p id="wallet-address"></p>
 
   <script>
-    let web3;
-
     async function connectWallet() {
-      if (window.ethereum) {
-        // MetaMask varsa
-        web3 = new Web3(window.ethereum);
+      if (typeof window.ethereum !== 'undefined') {
         try {
           const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-          document.getElementById("wallet-address").innerText = "Connected: " + accounts[0];
+          const address = accounts[0];
+          document.getElementById('wallet-address').innerText = 'Connected: ' + address;
         } catch (error) {
-          alert("Connection rejected.");
+          alert('Connection rejected by user.');
         }
       } else {
-        // WalletConnect fallback (Trust Wallet dahil)
-        const provider = new WalletConnectProvider.default({
-          rpc: {
-            56: "https://bsc-dataseed.binance.org/" // BNB Chain
-          },
-          chainId: 56
-        });
-
-        await provider.enable();
-        web3 = new Web3(provider);
-        const accounts = await web3.eth.getAccounts();
-        document.getElementById("wallet-address").innerText = "Connected: " + accounts[0];
+        alert('MetaMask not found. Please install it.');
       }
     }
   </script>
-
-  <p style="margin-top: 40px; font-size: 12px;">© 2025 JimmyBoss Collective. All rights reserved.</p>
 </body>
 </html>
